--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,6 +17,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_PASSWORD: readnet-crm
+          POSTGRES_DB: readnetcrm
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
@@ -27,6 +37,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+      env:
+        SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/readnetcrm
+        SPRING_DATASOURCE_USERNAME: readnet-crm
+        SPRING_DATASOURCE_PASSWORD: readnet-crm
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     #- name: Update dependency graph
