--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
       env:
-        SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/readnetcrm
+        SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/readnetcrm?ApplicationName=readnetcrm&currentSchema=crm
         SPRING_DATASOURCE_USERNAME: readnet-crm
         SPRING_DATASOURCE_PASSWORD: readnet-crm
 
