--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,12 +20,16 @@ jobs:
 
     services:
       postgres:
-        image: postgres
-        ports:
-          - 5432:5432
+        image: postgres:12.2
         env:
+          POSTGRES_USER: readnet-crm
           POSTGRES_PASSWORD: readnet-crm
           POSTGRES_DB: readnetcrm
+        ports:
+          # will assign a random free host port
+          - 5432/5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
     - uses: actions/checkout@v3
@@ -37,10 +41,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
-      env:
-        SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/readnetcrm?ApplicationName=readnetcrm&currentSchema=crm
-        SPRING_DATASOURCE_USERNAME: readnet-crm
-        SPRING_DATASOURCE_PASSWORD: readnet-crm
+      #env:
+      #  SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/readnetcrm?ApplicationName=readnetcrm&currentSchema=crm
+      #  SPRING_DATASOURCE_USERNAME: readnet-crm
+      #  SPRING_DATASOURCE_PASSWORD: readnet-crm
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     #- name: Update dependency graph
