--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,25 +45,26 @@ jobs:
       #  SPRING_DATASOURCE_USERNAME: readnet-crm
       #  SPRING_DATASOURCE_PASSWORD: readnet-crm
 
-    - name: Build and Push Docker Image for amd64
-      uses: mr-smithers-excellent/docker-build-push@v5
-      with:
-        image: readnet/readnet-crm
-        tags: latest-amd64
-        registry: docker.io
-        dockerfile: Dockerfile.amd64
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    #- name: Build & Push Docker Image
+    #  uses: mr-smithers-excellent/docker-build-push@v5
+    #  with:
+    #    image: readnet/readnet-crm
+    #    tags: latest
+    #    registry: docker.io
+    #    dockerfile: Dockerfile
+    #    username: ${{ secrets.DOCKER_USERNAME }}
+    #    password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and Push Docker Image for arm64
-      uses: mr-smithers-excellent/docker-build-push@v5
+    - name: Build and Push Multi-Arch Docker Image
+      uses: docker/build-push-action@v2
       with:
-        image: readnet/readnet-crm
-        tags: latest-arm64
-        registry: docker.io
-        dockerfile: Dockerfile.arm64
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        context: .
+        file: ./Dockerfile
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: |
+          docker.io/readnet/readnet-crm:latest-amd64
+          docker.io/readnet/readnet-crm:latest-arm64
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     #- name: Update dependency graph
